# meldog-ros

./: .gitignore
.github/workflows/: ci.yml  lint.yml
src/meldog_bridge/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/meldog_bridge/meldog_bridge/: circle_trajectory.py  demo_single_motor.py  jump_control_node.py  jump_data_St_nice.csv  (+8 more)
src/meldog_description/: CMakeLists.txt  package.xml
src/meldog_hardware/pi3hat_hardware_interface/: CMakeLists.txt  LICENSE  README.md  package.xml  pi3hat_hardware_interface.xml
src/meldog_hardware/pi3hat_hardware_interface/bringup/config/: test_single_motor.yaml
src/meldog_hardware/pi3hat_hardware_interface/bringup/launch/: spawn_robot.launch.py  test_double_motor.launch.py  test_single_motor.launch.py
src/meldog_hardware/pi3hat_hardware_interface/include/JointActuatorTransform/: JointActuatorTransform.hpp
src/meldog_hardware/pi3hat_hardware_interface/include/actuator_wrappers/: ActuatorWrapperBase.hpp  MoteusWrapper.hpp
src/meldog_hardware/pi3hat_hardware_interface/include/controllers/: Controller.hpp  ControllerBridge.hpp  ControllerStructures.hpp  Controllers.hpp
src/meldog_hardware/pi3hat_hardware_interface/include/controllers/bridges/: ControllerBridge.hpp  MoteusBridge.hpp
src/meldog_hardware/pi3hat_hardware_interface/include/controllers/wrappers/: ControllerWrapper.hpp  MoteusWrapper.hpp  WrappersTypes.hpp
src/meldog_hardware/pi3hat_hardware_interface/include/imu/: IMUTransform.hpp
src/meldog_hardware/pi3hat_hardware_interface/include/imu_transform/: IMUTransform.hpp
src/meldog_hardware/pi3hat_hardware_interface/include/joint_actuator_transform/: JointActuatorTransform.hpp  Transmissions.hpp
src/meldog_hardware/pi3hat_hardware_interface/include/motor_wrappers/: MoteusWrapper.hpp  MotorWrapperBase.hpp
src/meldog_hardware/pi3hat_hardware_interface/include/old_code/: JointActuatorTransform.hpp  Transmissions.hpp
src/meldog_hardware/pi3hat_hardware_interface/include/pi3hat/: realtime.h
src/meldog_hardware/pi3hat_hardware_interface/include/pi3hat_hardware_interface/: pi3hat_hardware_interface.hpp  visibility_control.hpp
src/meldog_hardware/pi3hat_hardware_interface/include/wrappers/: ActuatorWrapperBase.hpp  MoteusWrapper.hpp
src/meldog_hardware/pi3hat_hardware_interface/src/: main_test.cpp  pi3hat_hardware_interface.cpp  simple_test.cpp
src/meldog_hardware/pi3hat_hardware_interface/src/actuator_wrappers/: MoteusWrapper.cpp
src/meldog_hardware/pi3hat_hardware_interface/src/actuator_wrappers/joint_actuator_transform/: JointActuatorTransform.cpp
src/meldog_hardware/pi3hat_hardware_interface/src/controllers/: Controller.cpp  ControllerBridge.cpp
src/meldog_hardware/pi3hat_hardware_interface/src/controllers/bridges/: ControllerBridge.cpp  MoteusBridge.cpp
src/meldog_hardware/pi3hat_hardware_interface/src/controllers/wrappers/: ControllerWrapper.cpp  MoteusWrapper.cpp
src/meldog_hardware/pi3hat_hardware_interface/src/imu/: IMUTransform.cpp
src/meldog_hardware/pi3hat_hardware_interface/src/imu_transform/: IMUTransform.cpp
src/meldog_hardware/pi3hat_hardware_interface/src/joint_actuator_transform/: JointActuatorTransform.cpp  Transmissions.cpp
src/meldog_hardware/pi3hat_hardware_interface/src/motor_wrappers/: MoteusWrapper.cpp
src/meldog_hardware/pi3hat_hardware_interface/src/tests/hardware/: double_wrapper_test.cpp  simple_test.cpp  single_wrapper_test.cpp
src/meldog_hardware/pi3hat_hardware_interface/src/wrappers/: MoteusWrapper.cpp
src/meldog_hardware/pi3hat_hardware_interface/test/: test_double_motor.urdf.xacro  test_single_motor.urdf.xacro
src/meldog_hardware/pi3hat_hardware_interface/test/bringup/config/: test_double_motor.yaml
src/meldog_hardware/pi3hat_hardware_interface/test/bringup/launch/: test_double_moteus.launch.py  test_single_moteus.launch.py
src/meldog_hardware/pi3hat_hardware_interface/test/controllers/: double_bridge_test.cpp  single_bridge_test.cpp
src/meldog_hardware/pi3hat_hardware_interface/test/controllers/moteus/: double_moteus_bridge_test.cpp  moteus_tests_compile.sh  simple_moteus_test.cpp  single_moteus_bridge_test.cpp
src/meldog_hardware/pi3hat_hardware_interface/test/hardware/: double_bridge_test.cpp  simple_test.cpp  simple_test_2.cpp  single_bridge_test.cpp  single_wrapper_test.cpp
src/meldog_hardware/pi3hat_hardware_interface/test/urdf/: test_double_moteus.urdf.xacro  test_single_moteus.urdf.xacro  test_single_motor.urdf.xacro
src/meldog_hardware/pi3hat_hardware_interface/tests/hardware/: double_bridge_test.cpp  double_wrapper_test.cpp  simple_test.cpp  single_bridge_test.cpp  single_wrapper_test.cpp
src/meldog_hardware/pi3hat_hardware_interface/urdf/: test_double_motor.urdf.xacro  test_single_motor.urdf.xacro
src/meldog_interfaces/: CMakeLists.txt  package.xml
src/meldog_logger/: package.xml  setup.cfg  setup.py
src/meldog_simple_description/: CMakeLists.txt  package.xml
src/meldog_simple_twin/: CMakeLists.txt  package.xml
src/meldog_tests/meldog_interfaces_tests/: CMakeLists.txt  package.xml
src/meldog_tests/meldog_interfaces_tests/msg/: MoteusControl.msg  MultiMoteusControl.msg  MultiMoteusState.msg
src/meldog_tests/meldog_leg_tests/: README.md  package.xml  setup.cfg  setup.py
src/meldog_tests/meldog_leg_tests/launch/: circle_trajectory_demo.launch.py  demo_single_motor.launch.py  jumping_demo.launch.py  linear_trajectory_demo.launch.py  moteus_controller.launch.py  moteus_ploter_demo.launch.py  start_controller.launch.py
src/meldog_tests/meldog_leg_tests/meldog_leg_tests/: circle_trajectory.py  demo_single_motor.py  forward_kinematics_2D.py  inverse_kinematics_2D.py  jump_control_node.py  linear_trajectory.py  moteus_ploter.py  multi_moteus_controller.py  multi_moteus_controller_new.py  multi_moteus_controller_single_thread.py  multi_moteus_controller_two_threads.py
src/meldog_tests/meldog_leg_tests/meldog_leg_tests/jump_data/: jump_data_small_h.csv
src/meldog_tests/meldog_leg_tests/meldog_leg_tests/launch/: linear_trajectory_demo.launch.py
src/moteus_plugin/: package.xml  plugin.xml  setup.cfg  setup.py
(+104 files in other folders)
